--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/Sdanner08/liri-node-app#readme",
   "dependencies": {
-    "dotenv": "^6.0.0"
+    "dotenv": "^6.0.0",
+    "fs": "0.0.1-security",
+    "request": "^2.87.0",
+    "simple-node-logger": "^0.93.37",
+    "spotify": "^0.3.0",
+    "twitter": "^1.7.1"
   }
 }
